fixed button to breakdown spacing, fixed issue with switching between mint and other forms with too much amount error

--- a/packages/simplified/src/modules/liquidity/market-liquidity-view.styles.less
+++ b/packages/simplified/src/modules/liquidity/market-liquidity-view.styles.less
@@ -208,6 +208,7 @@
     display: grid;
     grid-gap: @size-32 @size-64;
     grid-template-columns: 0.595fr 0.405fr;
+    grid-auto-flow: column;
 
     > div[class*="AmountInput"] {
       border: none;
@@ -222,6 +223,14 @@
         .ThemeBorder;
       }
     }
+
+    > section.BreakdownAndAction {
+      grid-row: span 2;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: min-content;
+      grid-gap: @size-32 0;
+    }
   }
 
   &.isRemove {
@@ -230,6 +239,7 @@
 
     > main {
       grid-template-columns: 1fr;
+      grid-auto-flow: dense;
 
       > div[class*="AmountInput"],
       > div.PriceInstructions,
@@ -245,6 +255,7 @@
 
     > main {
       grid-template-columns: 1fr;
+      grid-auto-flow: dense;
 
       > div.PriceInstructions,
       > div.PricesAndOutcomes {
@@ -351,25 +362,10 @@
       grid-template-columns: 1fr;
       grid-gap: @size-24;
       padding: @size-16;
+      grid-auto-flow: dense;
 
-      .Breakdown {
-        grid-row: 3;
-      }
-
-      .ActionButtons {
-        grid-row: 4;
-      }
-    }
-
-    &.isRemove {
-      > main {
-        > div.Breakdown {
-          grid-row: 1;
-        }
-
-        > div.ActionButtons {
-          grid-row: 2;
-        }
+      > section.BreakdownAndAction {
+        grid-gap: @size-24;
       }
     }
 
@@ -377,13 +373,6 @@
       > main {
         > div[class*="AmountInput"] {
           grid-row: 1;
-        }
-        > div.Breakdown {
-          grid-row: 2;
-        }
-
-        > div.ActionButtons {
-          grid-row: 3;
         }
       }
     }
